--- a/src/main/resources/com/project/twittersimulation/forgotPassword.fxml
+++ b/src/main/resources/com/project/twittersimulation/forgotPassword.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: WHITE;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.project.twittersimulation.ForgotPassword">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" style="-fx-background-color: WHITE;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.project.twittersimulation.view.ForgotPassword">
     <columnConstraints>
         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
     </columnConstraints>
@@ -27,37 +27,59 @@
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             </columnConstraints>
             <rowConstraints>
-                <RowConstraints maxHeight="286.0" minHeight="10.0" prefHeight="272.0" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="140.0" minHeight="10.0" prefHeight="28.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="334.0" minHeight="10.0" prefHeight="334.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="140.0" minHeight="10.0" prefHeight="66.0" vgrow="SOMETIMES" />
             </rowConstraints>
             <children>
                 <HBox prefHeight="100.0" prefWidth="200.0">
                     <children>
-                        <ImageView fitHeight="322.0" fitWidth="492.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="352.0" fitWidth="600.0" pickOnBounds="true" preserveRatio="true">
                             <image>
                                 <Image url="@../../../images/image1.png" />
                             </image>
                         </ImageView>
                     </children>
                 </HBox>
-                <HBox alignment="TOP_RIGHT" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1">
+                <GridPane GridPane.columnIndex="1">
+                    <columnConstraints>
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="501.0" minWidth="10.0" prefWidth="498.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="295.0" minWidth="10.0" prefWidth="102.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
                     <children>
-                        <ImageView fitHeight="75.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true">
-                            <image>
-                                <Image url="@../../../images/lock.png" />
-                            </image>
-                        </ImageView>
+                        <HBox alignment="TOP_RIGHT" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1">
+                            <children>
+                                <ImageView fitHeight="75.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true">
+                                    <image>
+                                        <Image url="@../../../images/lock.png" />
+                                    </image>
+                                </ImageView>
+                            </children>
+                        </HBox>
+                        <HBox alignment="CENTER_RIGHT" prefHeight="100.0" prefWidth="200.0">
+                            <children>
+                                <Button fx:id="backButton" mnemonicParsing="false" onAction="#BackToLogin" prefHeight="54.0" prefWidth="90.0" text="back">
+                                    <font>
+                                        <Font size="24.0" />
+                                    </font>
+                                </Button>
+                            </children>
+                        </HBox>
                     </children>
-                </HBox>
-                <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
-                    <children>
-                        <Label fx:id="wrongSecurity" textFill="RED">
-                            <font>
-                                <Font size="20.0" />
-                            </font>
-                        </Label>
-                    </children>
-                </HBox>
+                </GridPane>
+            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+               <children>
+                  <Label fx:id="wrongSecurity" alignment="CENTER" prefHeight="26.0" prefWidth="489.0" textFill="RED">
+                     <font>
+                        <Font size="20.0" />
+                     </font>
+                  </Label>
+               </children>
+            </HBox>
             </children>
         </GridPane>
         <GridPane GridPane.rowIndex="1">
@@ -70,7 +92,7 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             </rowConstraints>
             <children>
-                <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="1">
+                <HBox alignment="CENTER_RIGHT" prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="1">
                     <children>
                         <Label fx:id="passwordLabel" text="security question :" textFill="#00b2ff">
                             <font>
@@ -79,7 +101,7 @@
                         </Label>
                     </children>
                 </HBox>
-                <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+                <HBox alignment="CENTER_RIGHT" prefHeight="100.0" prefWidth="200.0" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
                     <children>
                         <Label fx:id="usernameLabel" alignment="CENTER_RIGHT" contentDisplay="CENTER" text="username : " textFill="#00b2ff">
                             <font>
@@ -109,14 +131,12 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             </rowConstraints>
             <children>
-                <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
-                    <children>
-                        <Button fx:id="changeButton" mnemonicParsing="false" onAction="#ChangePassword" text="change password" />
-                    </children>
-                </HBox>
                 <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1">
                     <children>
-                        <Button fx:id="backButton" mnemonicParsing="false" onAction="#BackToLogin" text="back" />
+                        <Button fx:id="changeButton" mnemonicParsing="false" onAction="#ChangePassword" prefHeight="53.0" prefWidth="184.0" text="change password">
+                            <font>
+                                <Font size="18.0" />
+                            </font></Button>
                     </children>
                 </HBox>
             </children>
